    [THINGS THAT MIGHT BREAK YOUR CODE]
    - This is no longer supported for enabling SQL tracing: 
         SQL::Interp TRACE => 1;
      You can still set $ENV{TRACE_SQL} = 1  to enable SQL tracing.

    [FEATURES]
    - Add sql_interp_strict() as a first stab at an API for adding a strict mode. 
    - Switched to using Sub::Exporter and Exporter. This allows you to do this:

      use SQL::Interp 'sql_interp_strict' { -as => 'sql_interp' };

      So that strict mode is enabled throughout your code. Before you do that,
      read the docs on sql_interp_strict-- some of your code may need to be
      refactored for it work, so you may want to start with the incremental
      approach.

1.10 2009-06-28

    [FEATURES]
    - Add support for MySQL's "REPLACE INTO". (TBONE, Mark Stosberg, RT#43477)

    [PERFORMANCE]
    - When SQL snippets are provided as hashrefs, we now always sort them to
      insure consistent results for the benefit of possible statement caching.
      This shouldn't change your application behavior, as hashs are not to be
      considered an ordered data structure. If you want to force an element to
      be first in the where clause, that's better done with the pre-existing
      functionality:
          sql_interp("... WHERE a = 1 AND ",\%rest_of_where_hash);

      Thanks to Andrew Kirkpatrick for the patch (RT#33310).

    [BUG FIXES]
    - The documentation said that we supported a reference to an arrayref in 
      the "IN ()" context, but there didn't appear to be code or tests for this.
      Both have been added now. (Mark Stosberg, RT#39336).

    [INTERNALS]
    - Update formatting and language about the historical fork with SQL::Interpolate.
    - Fix documentation typos (TBONE, RT#42726, RT#42733, RT#42336)

1.06 2007-12-20

    [INTERNALS]
    - Fix warnings introduced in 1.05
    - Fix Build.PL to create Makefile.PL

1.05 2007-11-15

    - Support "NOT IN" with an empty list (Aristotle, test by Mark Stosberg, RT#30752)